@@ -31,3 +31,8 @@ Known limitations:
 Release process:
 
 * Milestones are published in the [ANTLR grammars repo](https://github.com/antlr/grammars-v4).
+
+
+VM Args
+
+* For parsing large VB6 source code files, following VM args have to be set: -Xmx2048m -XX:MaxPermSize=256m
